--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=dbwEJBws.jar
-javac.classpath=
+jars.in.ejbjar=false
+javac.classpath=\
+    ${libs.javaee-api-7.0.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -47,7 +49,8 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.testng.classpath}
+    ${libs.testng.classpath}:\
+    ${libs.javaee-api-7.0.classpath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
