--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -50,7 +50,8 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.testng.classpath}:\
-    ${libs.javaee-api-7.0.classpath}
+    ${libs.javaee-api-7.0.classpath}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
